terraform/06-security-groups.tf
# Staging VPC security groups

resource "aws_security_group" "sg_ssh_staging" {
  name = "sg_ssh_staging"
  vpc_id = module.vpc_staging.vpc_id

  # SSH access from the VPC
  ingress {
      from_port   = 22
      to_port     = 22
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}

# External Target VPC security groups

resource "aws_security_group" "sg_ssh_external" {
  name = "sg_ssh_external"
  vpc_id = module.vpc_external.vpc_id

  # SSH access from the VPC
  ingress {
      from_port   = 22
      to_port     = 22
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}

# External Target VPC security groups

resource "aws_security_group" "sg_ssh_internal" {
  name = "sg_ssh_internal"
  vpc_id = module.vpc_internal.vpc_id

  # SSH access from the VPC
  ingress {
      from_port   = 22
      to_port     = 22
      protocol    = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

}
